Release 0.7.6 Downgrade JDK from 21 to 17
Fix getTypedObj for String

Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>